--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,7 +6,7 @@
 
 body {
   color: var(--van-gray-8);
-  background-color: #fcfcfe;
+  background-color: #f9fafb;
   transition: all 0.3s ease-in-out;
 }
 
